# mobile

./: .gitignore  README.md
client/: CMakeLists.txt  main.cpp  run.sh
client/context/: Context.cpp  Context.hpp  DataStorage.cpp  DataStorage.hpp  context.cpp  context.hpp
client/data/: address_book.json
client/exchange/: Exchange.cpp  Exchange.hpp  ReadPacket.cpp  ReadPacket.hpp  SerializedPacket.hpp  exchange.cpp  exchange.hpp
client/menu/: Menu.cpp  Menu.hpp  MenuItem.cpp  MenuItem.h  menu.cpp  menu.hpp
commonFiles/byteFunc/: BytesTransform.cpp  BytesTransform.hpp
commonFiles/inputArgsFunc/: InputArgsFunc.hpp
commonFiles/resultFunc/: ResultFunction.cpp  ResultFunction.hpp
commonFiles/stringFunc/: StringFunc.hpp
commonFiles/utilityFunc/: UtilityFunc.hpp
commonFiles/validateFunc/: ValidateFunc.hpp
server/: CMakeLists.txt  main.cpp  run.sh
server/Testing/: BaseStationTest.cpp  CMakeLists.txt  ListenerTest.cpp  MMETest.cpp  RegisterTest.cpp  SMSCTest.cpp  TestConfig.hpp  UeContextTest.cpp
server/baseStation/: BaseStation.cpp  BaseStation.hpp
server/config/: basst.json
server/listener/: Listener.cpp  Listener.hpp
server/mme/: MME.cpp  MME.hpp
server/register/: Register.cpp  Register.hpp
server/smsc/: SMSC.cpp  SMSC.hpp
server/ueContext/: BytesTransform.cpp  BytesTransform.hpp  HandleMessage.cpp  HandleMessage.hpp  UeContex.cpp  UeContex.hpp  UeContext.cpp  UeContext.hpp
